--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,13 +15,31 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  
 
+
+}
+html{
+  scroll-behavior: smooth;
+}
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  overflow-x: hidden;
+  
+}
+::-webkit-scrollbar {
+  width: 7px;
+ 
+}
+
+
+::-webkit-scrollbar-thumb {
+  background: rgb(3 105 161 );; 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-button {
+  height: 200px; 
 }
